Sets the ANT_OPTS needed for a clean Scala build